# spotify-downloader

./: .gitignore  CONTRIBUTING.md  README.md  cli.py  core.py  downloader.py  gui.py  main.py  mypy.ini  pyproject.toml  requirements.txt  spotify-dl.py  spotify-dl.spec  spotify_utils.py  ytmusic_utils.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ISSUE_REPORT.yml
